@@ -1,3 +1,9 @@
+Wed Jan 16 08:23:38 CET 2002  Robin Ericsson  <lobbin@localhost.nu>
+
+	* src/profiles (profilelist_cleanup): Added.
+	(profilelist_dialog): Changed signal to check if widget already
+	have been destroyed.
+
 Mon Jan 14 14:26:07 CET 2002  Robin Ericsson  <lobbin@localhost.nu>
 
 	* ROADMAP: Updated.
